Add installation instructions and index retrieval steps to Search_Engine.ipynb

--- a/Search_Engine.ipynb
+++ b/Search_Engine.ipynb
@@ -3781,6 +3781,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Install Dependencies"
+      ],
+      "metadata": {
+        "id": "AuPkNVJU8l-k"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install -q langchain_community faiss-cpu rank_bm25"
@@ -3790,7 +3799,48 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0a2dcd5b-7e07-4570-ff8a-8a44706fcf6b"
+        "outputId": "3a7ddde3-91f3-49d6-cfa8-78a9282bb8f5"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m31.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m30.7/30.7 MB\u001b[0m \u001b[31m56.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m40.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m423.3/423.3 kB\u001b[0m \u001b[31m25.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.9/50.9 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Get Index from the repository\n",
+        "\n",
+        "- This is a pre-built index from my repository\n",
+        "- This step is optional.\n",
+        "- If you want to build fresh index, Just don't run this step."
+      ],
+      "metadata": {
+        "id": "8GoVEBiO8oae"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://github.com/balnarendrasapa/search-engine/raw/refs/heads/main/built_index.zip"
+      ],
+      "metadata": {
+        "id": "2Y4P8q3j7ytd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09f13d7d-3047-45c9-abeb-ae386fce3c5f"
       },
       "execution_count": 1,
       "outputs": [
@@ -3798,15 +3848,67 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m30.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m30.7/30.7 MB\u001b[0m \u001b[31m55.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m46.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m423.3/423.3 kB\u001b[0m \u001b[31m29.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.9/50.9 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
+            "--2025-04-05 17:13:44--  https://github.com/balnarendrasapa/search-engine/raw/refs/heads/main/built_index.zip\n",
+            "Resolving github.com (github.com)... 140.82.112.4\n",
+            "Connecting to github.com (github.com)|140.82.112.4|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/balnarendrasapa/search-engine/refs/heads/main/built_index.zip [following]\n",
+            "--2025-04-05 17:13:45--  https://raw.githubusercontent.com/balnarendrasapa/search-engine/refs/heads/main/built_index.zip\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 3443323 (3.3M) [application/zip]\n",
+            "Saving to: ‘built_index.zip’\n",
+            "\n",
+            "built_index.zip     100%[===================>]   3.28M  --.-KB/s    in 0.08s   \n",
+            "\n",
+            "2025-04-05 17:13:45 (40.4 MB/s) - ‘built_index.zip’ saved [3443323/3443323]\n",
+            "\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip built_index.zip"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iuQsk1bS8c-s",
+        "outputId": "324f62d3-d0aa-4be4-807a-00c346940e95"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  built_index.zip\n",
+            "   creating: built_index/\n",
+            "   creating: built_index/vector_store/\n",
+            "  inflating: built_index/vector_store/index.pkl  \n",
+            "  inflating: built_index/vector_store/index.faiss  \n",
+            "  inflating: built_index/search_index.json  \n",
+            "  inflating: built_index/bm25_index.pkl  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Crawler Code\n",
+        "\n",
+        "- If you want the crawler to crawl more pages, set PAGES_TO_CRAWL value to your liking\n",
+        "- TOP_K_RESULTS will show you top k searches.\n",
+        "- You can also change the BASE_URL to your liking"
+      ],
+      "metadata": {
+        "id": "mqKhE4gN86Z8"
+      }
     },
     {
       "cell_type": "code",
@@ -3820,7 +3922,7 @@
       "metadata": {
         "id": "rFSo6wbnI07F"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -4185,7 +4287,7 @@
         "id": "iOS93c--B2eJ",
         "outputId": "e8ed67c9-35a2-4f49-d59f-5f3fbae5f497"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4384,6 +4486,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Search the Index.\n",
+        "\n",
+        "- There are two kinds of searches\n",
+        "- One is semantic searching using vector embeddings\n",
+        "- Another is sparse searching using bm25."
+      ],
+      "metadata": {
+        "id": "0TtHXugo89xR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "engine.interactive_search()"
@@ -4395,7 +4510,7 @@
         "id": "BqVR_7VEDQro",
         "outputId": "77676956-a77b-4a4b-f84c-f05a9a982a66"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4445,7 +4560,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Uvd-_HVNW_4d"
+        "id": "Q-QRpOh57ZwV"
       },
       "execution_count": null,
       "outputs": []
